# GeometryProcessing2

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  Voronoi.cpp  ibs.frag  main.cpp
cmake_modules/: FindGLM.cmake  FindRTK.cmake
inputs/pair1/: chair1.off  chair3.off  chair4.off  readme.txt  table1.off  table2.off
inputs/pair2/: cup2.off  cup3.off  cup4.off  readme.txt
inputs/pair3/: keyboard2.off  readme.txt
inputs/pair4/: readme.txt
inputs/pair5/: readme.txt
